# Noviq

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  ORGANIZATION.md  PRIORITIES.md  README.md  STRUCTURE.md  TESTS.md  build.bat  build.ps1  build.rs  build.sh  features.md  litecode  litecode.bat  litecode.c  litecode.py  noviq.c  test.lc  test.nvq  test2.nvq  wiki.md  wiki.txt
.github/workflows/: build-photon.yml  build.yml  gcc-compile.yml
docs/: language_reference.md
example/: test3.nvq
examples/: README.md  arithmetic.nvq  constants.nvq  control_flow.nvq  hello.nvq  hello_world.nvq  interpolation_demo.nvq  multiline_test.nvq  quotes.nvq  showcase.nvq  test.nvq  variables.nvq
include/: arithmetic.h  comparison.h  config.h  control_flow.h  display.h  error.h  expressions.h  input.h  interpreter.h  logical.h  types.h  variables.h
lexar/: lexar_display.c  lexar_display.h  lexar_interpret.c  lexar_interpret.h
lexer/: lexer_display.c  lexer_display.h  lexer_interpret.c  lexer_interpret.h
litecode-site/.github/workflows/: deploy.yml
noviq-site/.github/workflows/: deploy.yml
photon/: CHANGELOG.md  Cargo.toml  OVERVIEW.md  QUICKSTART.md  README.md  SCOPE.md
photon/src/: main.rs  system_check.rs
src/: lib.rs  main.c  main.rs
src/frontend/: ast.rs  mod.rs  token.rs
src/frontend/lexer/: mod.rs  reader.rs
src/frontend/parser/: expr.rs  mod.rs  stmt.rs
src/interpreter/: expressions.c  interpreter.c  variables.c
src/operators/: arithmetic.c  comparison.c  logical.c
src/runtime/: mod.rs  value.rs
src/runtime/builtins/: log.rs  mod.rs  print.rs
src/runtime/interpreter/: expr.rs  mod.rs  stmt.rs
src/statements/: control_flow.c  display.c  input.c
src/utils/: error.c  mod.rs  tests.rs  version.rs
tests/: test.nvq  test_string_comments.nvq
