[package]
name = "noviq"
version = "0.1.0"
edition = "2021"
authors = ["Noviq Contributors"]
description = "A simple, compiled programming language written in Rust"
license = "GPL-3.0"

[dependencies]
chrono = "0.4"

[[bin]]
name = "noviq"
path = "src/main.rs"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
panic = "abort"        # Smaller binary, no unwinding
strip = true           # Strip symbols from binary

[profile.snapshot]
inherits = "release"   # Inherits all optimizations from release
