[package]
name = "photon"
version = "0.1.0"
edition = "2021"
description = "Build tool for the Noviq programming language"
authors = ["Noviq Contributors"]

[[bin]]
name = "photon"
path = "src/main.rs"

[dependencies]
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
